# Zip-Extractor1

./: pnpm-lock.yaml
attached_assets/zbx-chain_extracted/zbx-chain/: .gitignore  AUDIT_2026-06-27.md  AUDIT_2026-06-28.md  AUDIT_2026-06-29.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _ARCHIVE_MANIFEST.md  build.rs  deny.toml
attached_assets/zbx-chain_extracted/zbx-chain/.github/workflows/: ci.yml  fuzz-ci.yml  mainnet-readiness.yml
attached_assets/zbx-chain_extracted/zbx-chain/benches/: block_execution.rs  crypto.rs  evm_opcodes.rs  tx_throughput.rs
attached_assets/zbx-chain_extracted/zbx-chain/config/: devnet.toml  mainnet-genesis.json  mainnet-validators.json  mainnet.toml  testnet-genesis-zusd-note.md  testnet-genesis.json  testnet.toml
attached_assets/zbx-chain_extracted/zbx-chain/contracts/: BridgeMultisig.sol  BridgeVault.sol  DAOCreator.sol  Multicall3.sol  Ownable2Step.sol  README.md  RewardPool.sol  TokenRegistry.sol  ZRC1155Creator.sol  ZRC20.sol  ZRC20Airdrop.sol  ZRC20Base.sol  ZRC20Creator.sol  ZRC20Factory.sol  ZRC20FlashMint.sol  ZRC20Staking.sol  ZRC20Standard.md  ZRC20Token.sol  ZRC20TokenLocker.sol  ZRC20Vesting.sol  ZRC721Base.sol  ZRC721Creator.sol  ZUSD.sol  ZbxAMM.sol  ZbxAMMFactory.sol  ZbxAggregatorV3.sol  ZbxBridge.sol  ZbxBundler.sol  ZbxCardGame.sol  ZbxContractFactory.sol  ZbxDatedFutures.sol  ZbxEntryPoint.sol  ZbxFaucet.sol  ZbxFlashLoan.sol  ZbxGameEscrow.sol  ZbxGameItems.sol  ZbxGovernor.sol  ZbxGroth16Verifier.sol  ZbxLaunchpad.sol  ZbxLendingPool.sol  (+34 more)
attached_assets/zbx-chain_extracted/zbx-chain/contracts/interfaces/: IBridgeMultisig.sol  IBridgeVault.sol  IERC20.sol  IERC3156FlashBorrower.sol  IERC3156FlashLender.sol  IMulticall3.sol  IOwnable2Step.sol  IRewardPool.sol  ITokenRegistry.sol  IZBX.sol  IZBXGov.sol  IZRC20.sol  IZRC20Burnable.sol  IZRC20Freezable.sol  IZRC20Lockable.sol  IZRC20Mintable.sol  IZRC721.sol  IZUSD.sol  IZbxAMM.sol  IZbxAMMFactory.sol  IZbxAggregatorV3.sol  IZbxBridge.sol  IZbxBundler.sol  IZbxCardGame.sol  IZbxContractFactory.sol  IZbxDatedFutures.sol  IZbxEntryPoint.sol  IZbxFaucet.sol  IZbxFlashLoan.sol  IZbxGameEscrow.sol  IZbxGameItems.sol  IZbxGovernor.sol  IZbxGroth16Verifier.sol  IZbxLaunchpad.sol  IZbxLending.sol  IZbxLendingPool.sol  IZbxLiquidStaking.sol  IZbxMemeFactory.sol  IZbxMultisig.sol  IZbxNFT.sol  (+27 more)
attached_assets/zbx-chain_extracted/zbx-chain/contracts/libraries/: FixedPoint.sol  GoldilocksField.sol  Governable.sol  MerklePatriciaProof.sol  ReentrancyGuard.sol  RlpReader.sol  SafeCast.sol  SafeERC20.sol  StarkFri.sol  StarkMerkle.sol  StarkTranscript.sol  ZvmOpcodes.sol
attached_assets/zbx-chain_extracted/zbx-chain/contracts/randomness/: ZbxRandomBeacon.sol
attached_assets/zbx-chain_extracted/zbx-chain/contracts/test/: BridgeMultisig.t.sol  BridgeVault.t.sol  Erc3156FlashMint.t.sol  GovernorVotesIntegration.t.sol  MerklePatriciaProof.t.sol  Ownable2Step.t.sol  Ownable2StepMigration.t.sol  PayableCallMigration.t.sol  RewardPool.t.sol  SupportsInterface.t.sol  Tier2Fixes.t.sol  TokenRegistry.t.sol  ZRC20.t.sol  ZRC20Base.t.sol  ZRC20FreezeParity.t.sol  ZRC20Staking.t.sol  ZRC20Token.t.sol  ZRC20TokenAdvanced.t.sol  ZRC20Vesting.t.sol  ZUSD.t.sol  ZbxAMM.t.sol  ZbxBridge.t.sol  ZbxCardGame.t.sol  ZbxContractFactory.t.sol  ZbxEntryPoint.t.sol  ZbxFaucet.t.sol  ZbxFlashLoan.t.sol  ZbxGameEscrow.t.sol  ZbxGovernor.t.sol  ZbxLaunchpad.t.sol  ZbxLendingPool.t.sol  ZbxLiquidStaking.t.sol  ZbxMemeFactory.t.sol  ZbxMultisig.t.sol  ZbxNFT.t.sol  ZbxNameService.t.sol  ZbxNftMarketplace.t.sol  ZbxOptions.t.sol  ZbxOracle.t.sol  ZbxOracleConsumer.t.sol  (+17 more)
attached_assets/zbx-chain_extracted/zbx-chain/contracts/tokens/: WZBX.sol  ZBXGov.sol  ZbxBNB.sol  ZbxBTC.sol  ZbxETH.sol  ZbxMATIC.sol  ZbxSOL.sol  ZbxUSDC.sol  ZbxUSDT.sol
attached_assets/zbx-chain_extracted/zbx-chain/contracts/upgradeable/: ZbxProxy.sol
attached_assets/zbx-chain_extracted/zbx-chain/crates/: _ARCHIVE_MANIFEST.md
attached_assets/zbx-chain_extracted/zbx-chain/deploy/: DEPLOY_GUIDE.md  docker-compose.production.yml  genesis-fill.sh  mainnet-genesis.template.json  mainnet.production.toml  vps-setup.sh
attached_assets/zbx-chain_extracted/zbx-chain/docker/: Dockerfile  docker-compose.yml
attached_assets/zbx-chain_extracted/zbx-chain/docs/: ACCOUNT_ABSTRACTION.md  API_REFERENCE.md  ARCHITECTURE.md  BRIDGE.md  CHAIN_COMPARISON.md  CODE_GAPS.md  CONFIGURATION.md  CONSENSUS.md  CROSS_CHAIN.md  DA_LAYER.md  DOC_STATUS.md  EVM_COMPATIBILITY.md  GOVERNANCE.md  INCIDENT-RESPONSE-RUNBOOK.md  LIGHT_CLIENT.md  MAINNET_BUILD_GUIDE.md  MAINNET_LAUNCH_CHECKLIST.md  MEV_PROTECTION.md  NETWORK_PROTOCOL.md  NFT_STANDARD.md  PAYID.md  PERFORMANCE.md  RPC_API.md  SDK_GUIDE.md  SECURITY_AUDIT.md  SECURITY_FIXES_VPS_HARDENING.md  STAKING.md  TESTNET-VS-MAINNET-FEATURES.md  TESTNET_AUDIT_2026-06-29.md  TESTNET_LAUNCH_GUIDE.md  TOKENOMICS.md  UPGRADE_GUIDE.md  VALIDATOR_GUIDE.md  WASM_CONTRACTS.md  WHITEPAPER.md  ZK_PROOFS.md  ZUSD.md  ZVM.md
attached_assets/zbx-chain_extracted/zbx-chain/fuzz/: Cargo.toml
attached_assets/zbx-chain_extracted/zbx-chain/k8s/: archive-node.yaml  bridge-relayer.yaml  bundler.yaml  da-node.yaml  explorer.yaml  faucet.yaml  indexer.yaml  light-node.yaml  monitoring.yaml  prover.yaml  redis.yaml  rpc-service.yaml  validator-deployment.yaml
attached_assets/zbx-chain_extracted/zbx-chain/monitoring/: alertmanager.yml  grafana-dashboard.json  prometheus.yml
attached_assets/zbx-chain_extracted/zbx-chain/node/: Cargo.toml
attached_assets/zbx-chain_extracted/zbx-chain/proto/: consensus.proto  da.proto  node.proto  prover.proto
attached_assets/zbx-chain_extracted/zbx-chain/scripts/: benchmark.sh  cargo-env.sh  check-chain-id.sh  check-orphans.sh  ci-check.sh  da-submit.sh  deploy-contracts.sh  export-state.sh  fuzz-ci.sh  generate-genesis.sh  keygen.sh  load-test.sh  mainnet-add-validator.sh  mainnet-deploy.sh  mainnet-launch.sh  run-fuzz.sh  slither.config.json  snapshot.sh  testnet-add-validator.sh  testnet-deploy.sh  testnet-genesis-keygen.sh  upgrade-contracts.sh  verify-contracts.sh
(+1050 files in other folders)
