[package]
name = "zbx-abi"
version = "0.1.0"
edition = "2021"
description = "Solidity ABI encoder/decoder for EVM smart-contract interaction"

[dependencies]
zbx-types  = { path = "../zbx-types" }
thiserror  = "1"
bytes      = "1"
hex        = "0.4"
sha3       = "0.10"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"