[package]
name    = "zbx-admin"
version = "0.1.0"
edition = "2021"
description = "Zebvix Chain — node administration CLI, RPC, and live configuration"
authors     = ["Zebvix Technologies <dev@zebvix.com>"]
license     = "Apache-2.0"

[dependencies]
zbx-types     = { path = "../zbx-types" }
zbx-storage   = { path = "../zbx-storage" }
zbx-mempool   = { path = "../zbx-mempool" }
zbx-staking   = { path = "../zbx-staking" }
zbx-network   = { path = "../zbx-network" }
zbx-consensus = { path = "../zbx-consensus" }
zbx-crypto    = { path = "../zbx-crypto" }

serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1",    features = ["full"] }
tracing           = "0.1"
thiserror         = "1"
clap              = { version = "4",    features = ["derive"] }
jsonrpsee         = { version = "0.22", features = ["server", "client-core"] }
jsonrpsee-core    = "0.22"
hex               = "0.4"
sha3              = "0.10"
# Real HMAC + timing-safe comparison. Previously rolled our own with sha3 which
# is not an HMAC construction at all (vulnerable to length-extension nuances and
# not interoperable). See AUDIT_2026-04-30.md C-07.
sha2              = "0.10"
hmac              = "0.12"
subtle            = "2"
chrono            = { version = "0.4",  features = ["serde"] }
toml              = "0.8"
humantime         = "2"
tabled            = "0.15"