[package]
name        = "zbx-ai-sdk"
version     = "1.0.0"
edition     = "2021"
description = "ZBX Chain AI Agent SDK — oracle data, strategy DSL, session key executor, risk manager (Session 42)"

[dependencies]
zbx-ai-precompile = { path = "../zbx-ai-precompile" }
zbx-types         = { path = "../zbx-types" }
thiserror = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tracing   = "0.1"
sha3      = "0.10"
