[package]
name        = "zbx-appstore"
version     = "0.1.0"
edition     = "2021"
description = "Zebvix App Store — on-chain dApp registry with version management, ratings, and discovery."
license     = "Apache-2.0"

[dependencies]
zbx-types      = { path = "../zbx-types" }
zbx-crypto     = { path = "../zbx-crypto" }
zbx-storage    = { path = "../zbx-storage" }
zbx-primitives = { path = "../zbx-primitives" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
sha3           = "0.10"
hex            = "0.4"
semver         = "1"

[dev-dependencies]
tempfile = "3"
