[package]
name = "zbx-bundler"
version = "0.1.0"
edition = "2021"
description = "Zebvix Chain — ERC-4337 Account Abstraction bundler"

[dependencies]
zbx-types    = { path = "../zbx-types" }
zbx-crypto   = { path = "../zbx-crypto" }
zbx-evm      = { path = "../zbx-evm" }
zbx-rpc      = { path = "../zbx-rpc" }
zbx-metrics  = { path = "../zbx-metrics" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
tracing      = "0.1"
tokio        = { version = "1", features = ["full"] }
sha2         = "0.10"
sha3         = "0.10"
hex          = "0.4"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
k256         = { version = "0.13", features = ["ecdsa"] }