[package]
name        = "zbx-confidential"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
description = "Confidential transactions for ZBX Chain — Pedersen commitments, stealth addresses, Bulletproofs range proofs (ZEP-025)"

[dependencies]
zbx-types   = { path = "../zbx-types" }
zbx-crypto  = { path = "../zbx-crypto" }
serde       = { workspace = true }
serde-big-array = "0.5"
thiserror   = { workspace = true }
zeroize     = { workspace = true }
rand        = { workspace = true }
rand_core   = { workspace = true }
sha3        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
# Real elliptic-curve Pedersen commitments over Ristretto255
curve25519-dalek = { version = "4", features = ["rand_core"] }
