[package]
name = "zbx-consensus"
version = "0.2.0"
edition = "2021"
authors = ["Zebvix Technologies Pvt Ltd"]
description = "HotStuff BFT consensus engine for Zebvix"
license = "MIT"

[dependencies]
zbx-types = { path = "../zbx-types" }
zbx-crypto = { path = "../zbx-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
hex = "0.4"