[package]
name = "zbx-explorer"
version = "0.1.0"
edition = "2021"
description = "Block explorer backend indexer for Zebvix Chain."

[dependencies]
zbx-types    = { path = "../zbx-types" }
zbx-storage  = { path = "../zbx-storage" }
zbx-rpc      = { path = "../zbx-rpc" }
tokio        = { version = "1", features = ["full"] }
axum         = "0.7"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"