[package]
name = "zbx-gaming"
version = "0.1.0"
edition = "2021"
description = "Gaming framework for Zebvix Chain: VRF, game escrow, leaderboard, and ERC-1155 items."

[dependencies]
zbx-types    = { path = "../zbx-types" }
zbx-evm      = { path = "../zbx-evm" }
zbx-storage  = { path = "../zbx-storage" }
zbx-crypto   = { path = "../zbx-crypto" }
serde        = { version = "1", features = ["derive"] }
anyhow       = "1"
