[package]
name    = "zbx-gossip"
version = "0.1.0"
edition = "2021"
authors = ["Zebvix Technologies <dev@zebvix.com>"]
description = "GossipSub-based mempool propagation for Zebvix Chain"
license     = "Apache-2.0"

[dependencies]
zbx-types   = { path = "../zbx-types" }
zbx-crypto  = { path = "../zbx-crypto" }
zbx-network = { path = "../zbx-network" }
thiserror   = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
fnv         = "1"
rand        = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
tokio-test = "0.4"